fixed overflow issue

--- a/project3/css/styles.css
+++ b/project3/css/styles.css
@@ -277,7 +277,7 @@ Responsive Styles
 	}
 
 	form .group2 {
-		width: 47.5%;
+		width: 47.3%;
 		float: left;
 		margin-top: 5%;
 		margin-left: 5%;
